--- a/public/views/signup.ejs
+++ b/public/views/signup.ejs
@@ -84,8 +84,10 @@
             <div class="dropdown-content">
                 <a href="/user">Users</a>
                 <a href="/wargame">Wargame</a>
+                <a href="/wargame/upload">Upload</a><br>
 
                 <a href="/login">Login</a>
+                <a href="/logout">Logout</a>
                 <a href="/signup">Signup</a>
             </div>
         </div>
