--- a/public/views/upload.ejs
+++ b/public/views/upload.ejs
@@ -83,18 +83,25 @@
             <div class="dropdown-content">
                 <a href="/user">Users</a>
                 <a href="/wargame">Wargame</a>
+                <a href="/wargame/upload">Upload</a><br>
 
                 <a href="/login">Login</a>
+                <a href="/logout">Logout</a>
                 <a href="/signup">Signup</a>
             </div>
-        </div>
     </nav>
     <br>
     <br>
-    <br>
-    <br>
     <h1>Upload Page</h1>
-    
+    <br>
 
+    <form method="post">
+        <textarea type="text" name="title" placeholder="title"></textarea><br>
+        <textarea type="text" name="text" placeholder="text"></textarea><br>
+        <textarea type="text" name="flag" placeholder="flag"></textarea><br>
+        <input type="file" name="file"><br>
+        <button type="submit">submit</button>
+    </form>
+    
 </body>
 </html>
