--- a/public/views/problem.ejs
+++ b/public/views/problem.ejs
@@ -226,7 +226,11 @@
             </span>
         </div>
         <hr>
-        <p><%= posts.problemContent.text %></p>
+        <p><%= posts.problemContent.text %></p><br>
+        <form method="post">
+            <input type="text" name="flag" placeholder="Enter flag">
+            <button type="submit">submit</button>
+        </form>
 
     </div>
 
