--- a/public/views/upload.ejs
+++ b/public/views/upload.ejs
@@ -26,48 +26,43 @@
             background-color: #222;
             position: relative;
         }
-
         .dropdown-content {
             display: none;
-            flex-direction: column;
-            background-color: #222;
-            opacity: 0.8;
-            width: 100%;
+            flex-direction: column; /* 세로 방향으로 정렬 */
+            background-color: #222; /* 메뉴와 같은 배경색 */
+            opacity : 0.8;
+            width: 100%; /* 너비 설정 */
             text-align: center;
-            position: absolute;
-            left: 50%;
-            transform: translate(-50%, 10px);
+            position: absolute; /* 절대 위치 지정 */
+            left: 50%; /* 중앙 정렬을 위한 왼쪽 위치 */
+            transform: translate(-50%, 10px); /* 수평 중앙 정렬 및 약간 아래로 이동 */
             z-index: 1;
         }
-
         .dropdown-content a {
-            color: white;
-            padding: 10px 14px;
+            color: white; /* 링크 색상 */
+            padding: 12px 16px;
             text-decoration: none;
             display: block;
-            width: 100%;
+            width: 100%; /* 링크 전체 너비 사용 */
         }
-
         .dropdown-content a:hover {
-            background-color: #3a3a3a;
+            background-color: #3a3a3a; /* 호버 시 배경색 변경 */
+            
         }
-
         .dropdown.active .dropdown-content {
-            display: flex;
+            display: flex; /* 드롭다운 표시 */
         }
-
         .dropdown button {
-            padding: 8px 30px;
-            background-color: #222;
-            color: white;
-            border: none;
-            cursor: pointer;
+            padding: 10px 40px; /* 버튼 패딩 조정 */
+            background-color: #222; /* 버튼 배경색 */
+            color: white; /* 버튼 글자색 */
+            border: none; /* 버튼 테두리 없애기 */
+            cursor: pointer; /* 커서 모양 변경 */
         }
-
         .brand {
-            color: white;
-            text-decoration: none;
-            font-size: 20px;
+            color: white; /* 브랜드 텍스트 색상 */
+            text-decoration: none; /* 링크 장식 제거 */
+            font-size: 24px; /* 브랜드 텍스트 크기 */
         }
 
         .form-container {
@@ -226,8 +221,8 @@
 
     <div class="form-container">
         <div class="form-background">
-            <h1>Upload Page</h1>
-            <form method="post" >
+            <h1>Upload</h1>
+            <form method="post">
                 <input type="text" name="title" placeholder="Title" required class="small-input"><br>
                 <textarea name="text" placeholder="Text" required class="large-input"></textarea><br>
         
@@ -242,10 +237,13 @@
                     <option value="Web3">Web3</option>
                     <option value="etc">etc</option>
                 </select><br>
+
                 <input type="text" name="flag" placeholder="Flag" required class="small-input"><br>
                 <div class="file-input-container">
                     <label for="file" class="file-label">Choose a file</label>
-                    <input type="file" name="file" id="file" class="file-input" accept=".zip">
+        
+                        <input type="file" name="file" id="file" class="file-input" accept=".zip">
+              
                 </div>
                 <button type="submit">Submit</button>
             </form>
