FEAT wargame page css

--- a/public/views/upload.ejs
+++ b/public/views/upload.ejs
@@ -239,6 +239,7 @@
                 </select><br>
 
                 <input type="text" name="flag" placeholder="Flag" required class="small-input"><br>
+                <input type="text" name="score" placeholder="Score" required class="small-input"><br>
                 <div class="file-input-container">
                     <label for="file" class="file-label">Choose a file</label>
         
